--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/png" href="/assets/icons/favicon.png" />
     <link rel="stylesheet" type="text/css" href="/css/style.css" />
     <title>CRUD Persona</title>
 </head>
@@ -12,10 +13,14 @@
 <body>
     <section class="bodySection">
         <header>
-            <div>CRUD Persona</div>
+            <div class="headerTotal"> 
+                <img src="/assets/icons/CrudPersona.png" alt="CRUD">
+                CRUD Persona</div>
         </header>
         <section>
-            <div class="div_header">Registrar Persona</div>
+            <div class="header_seccion">
+                <img src="/assets/icons/create.png" alt="Create">
+                Registrar Persona</div>
             <div class="contenedor">
                 <section class="ingresoDatos">
                     <p>Nombre:</p>
@@ -51,31 +56,62 @@
                 <div id="btnCleanReg" class="boton">Limpiar</div>
             </div>
         </section>
-        <section>
-            <div class="div_header">Editar Persona</div>
-            <div class="contenedor">
-                <section class="ingresoDatos">
-                    <p>ID:</p>
-                    <div>
-                        <input type="number" required name="id" id="inputIDEdit" placeholder="1" min="1" />
-                        <div id="btnSelect" class="boton">Seleccionar</div>
-                    </div>
-                    <p>Nombre:</p>
-                    <input type="text" required name="nombre" id="inputNombreEdit" placeholder="Pepe" />
-                    <p>Apellido:</p>
-                    <input type="text" required name="apellido" id="inputApellidoEdit" placeholder="Perez" />
-                    <p>Correo:</p>
-                    <input type="text" required name="correo" id="inputCorreoEdit" placeholder="pepe_perez@gmail.com" />
-                    <p>Cedula:</p>
-                    <input type="text" required name="cedula" id="inputCedulaEdit" placeholder="0987654321" />
-                </section>
-            </div>
-            <div class="botones">
-                <div id="btnEdit" class="boton">Editar</div>
-                <div id="btnCleanEdit" class="boton">Limpiar</div>
-            </div>
-        </section>
+        <div class="EditarEliminar">
+            <section class="contenedorEditDelete">
+                <div class="headersEditDelete">
+                    <div class="header_seccion">
+                        <img src="/assets/icons/edit.png" alt="Edit">
+                        Editar Persona</div>
+                    <section class="ingresoDatos">
+                        <p>ID:</p>
+                        <div>
+                            <input type="number" required name="id" id="inputIDEdit" placeholder="1" min="1" />
+                            <div id="btnSelectEdit" class="boton">Seleccionar</div>
+                        </div>
+                        <p>Nombre:</p>
+                        <input type="text" required name="nombre" id="inputNombreEdit" placeholder="Pepe" />
+                        <p>Apellido:</p>
+                        <input type="text" required name="apellido" id="inputApellidoEdit" placeholder="Perez" />
+                        <p>Correo:</p>
+                        <input type="text" required name="correo" id="inputCorreoEdit"
+                            placeholder="pepe_perez@gmail.com" />
+                        <p>Cedula:</p>
+                        <input type="text" required name="cedula" id="inputCedulaEdit" placeholder="0987654321" />
+                    </section>
+                </div>
+                <div class="botones">
+                    <div id="btnEdit" class="boton">Editar</div>
+                    <div id="btnCleanEdit" class="boton">Limpiar</div>
+                </div>
+            </section>
+            <section class="contenedorEditDelete">
+                <div>
+                    <div class="header_seccion">
+                        <img src="/assets/icons/delete.png" alt="Delete">
+                        Eliminar Persona</div>
 
+                    <section class="ingresoDatos">
+                        <p>ID:</p>
+                        <div>
+                            <input type="number" required name="id" id="inputIDDel" placeholder="1" min="1" />
+                            <div id="btnSelectDel" class="boton">Seleccionar</div>
+                        </div>
+                        <p>Nombre:</p>
+                        <p id="p_nombre" class="p_view_input"></p>
+                        <p>Apellido:</p>
+                        <p id="p_apellido" class="p_view_input"></p>
+                        <p>Correo:</p>
+                        <p id="p_correo" class="p_view_input"></p>
+                        <p>Cedula:</p>
+                        <p id="p_cedula" class="p_view_input"></p>
+                    </section>
+                </div>
+                <div class="botones">
+                    <div id="btnDel" class="boton">Eliminar</div>
+                    <div id="btnCleanDel" class="boton">Limpiar</div>
+                </div>
+            </section>
+        </div>
         <footer>
 
         </footer>
