--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
-    <link rel="icon" type="image/png" href="https://github.com/JOSENAVAS46/JavaScript-Test/tree/main/assets/icons/favicon.png" />
-    <link rel="stylesheet" type="text/css" href="https://github.com/JOSENAVAS46/JavaScript-Test/blob/main/css/style.css" />
+    <link rel="icon" type="image/png" href="/assets/icons/favicon.png" />
+    <link rel="stylesheet" type="text/css" href="/css/style.css" />
     <title>CRUD Persona</title>
 </head>
 
@@ -15,13 +14,13 @@
     <section class="bodySection">
         <header>
             <div class="headerTotal">
-                <img src="https://github.com/JOSENAVAS46/JavaScript-Test/tree/main/assets/icons/CrudPersona.png" alt="CRUD">
+                <img src="/assets/icons/CrudPersona.png" alt="CRUD">
                 CRUD Persona
             </div>
         </header>
         <section>
             <div class="header_seccion">
-                <img src="https://github.com/JOSENAVAS46/JavaScript-Test/tree/main/assets/icons/create.png" alt="Create">
+                <img src="/assets/icons/create.png" alt="Create">
                 Registrar Persona
             </div>
 
@@ -63,11 +62,11 @@
             </div>
             <div class="botones">
                 <div id="btnReg" class="boton">
-                    <img src="https://github.com/JOSENAVAS46/JavaScript-Test/tree/main/assets/icons/add.png" alt="Add">
+                    <img src="/assets/icons/add.png" alt="Add">
                     Registrar
                 </div>
                 <div id="btnCleanReg" class="boton">
-                    <img src="https://github.com/JOSENAVAS46/JavaScript-Test/tree/main/assets/icons/clean.png" alt="Clean">
+                    <img src="/assets/icons/clean.png" alt="Clean">
                     Limpiar
                 </div>
             </div>
@@ -76,7 +75,7 @@
             <section class="contenedorEditDelete">
                 <div class="headersEditDelete">
                     <div class="header_seccion">
-                        <img src="https://github.com/JOSENAVAS46/JavaScript-Test/tree/main/assets/icons/edit.png" alt="Edit">
+                        <img src="/assets/icons/edit.png" alt="Edit">
                         Editar Persona
                     </div>
                     <section class="ingresoDatos">
@@ -99,11 +98,11 @@
                 </div>
                 <div class="botones">
                     <div id="btnEdit" class="boton">
-                        <img src="https://github.com/JOSENAVAS46/JavaScript-Test/tree/main/assets/icons/update.png" alt="Edit">
+                        <img src="/assets/icons/update.png" alt="Edit">
                         Editar
                     </div>
                     <div id="btnCleanEdit" class="boton">
-                        <img src="https://github.com/JOSENAVAS46/JavaScript-Test/tree/main/assets/icons/clean.png" alt="Clean">
+                        <img src="/assets/icons/clean.png" alt="Clean">
                         Limpiar
                     </div>
                 </div>
@@ -111,7 +110,7 @@
             <section class="contenedorEditDelete">
                 <div>
                     <div class="header_seccion">
-                        <img src="https://github.com/JOSENAVAS46/JavaScript-Test/tree/main/assets/icons/delete.png" alt="Delete">
+                        <img src="/assets/icons/delete.png" alt="Delete">
                         Eliminar Persona
                     </div>
 
@@ -133,11 +132,11 @@
                 </div>
                 <div class="botones">
                     <div id="btnDel" class="boton">
-                        <img src="https://github.com/JOSENAVAS46/JavaScript-Test/tree/main/assets/icons/remove.png" alt="Clean">
+                        <img src="/assets/icons/remove.png" alt="Clean">
                         Eliminar
                     </div>
                     <div id="btnCleanDel" class="boton">
-                        <img src="https://github.com/JOSENAVAS46/JavaScript-Test/tree/main/assets/icons/clean.png" alt="Clean">
+                        <img src="/assets/icons/clean.png" alt="Clean">
                         Limpiar
                     </div>
                 </div>
@@ -147,7 +146,7 @@
 
         </footer>
     </section>
-
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
     <script src="js/scripts.js"></script>
 </body>
 
